--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> Hello Dosto , welcome to devops demo project.</h1>
 <h2> And this project is executed very well.......</h2>
+update from developer...
